# epidemiology-llm-data-tasks

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  experiment.yml  pyproject.toml
.github/workflows/: linting.yaml  tests.yaml
data/ground_truth/: README.md  guidelines.md  initialise.sh  tasks.yml
ground_truth/: README.md  metadata.yml  tasks.yml  tasks_brief.yml  tasks_detailed.yml  tasks_generalised.yml  tasks_generalised_v2.yml
ground_truth/_sample17/: rtruth.R
ground_truth/sample1/: metadata.json  rpred.R  rtruth.R  task.yml
ground_truth/sample10/: metadata.json  rtruth.R  task.yml
ground_truth/sample10_economic_activity/: task.yml
ground_truth/sample11/: metadata.json  rtruth.R  task.yml
ground_truth/sample11_parental_economic_activity/: task.yml
ground_truth/sample12/: metadata.json  rtruth.R  task.yml
ground_truth/sample12_nssec/: task.yml
ground_truth/sample13/: metadata.json  rtruth.R  task.yml
ground_truth/sample13_parental_nssec/: task.yml
ground_truth/sample14/: metadata.json  rtruth.R  task.yml
ground_truth/sample14_housing_tenure/: task.yml
ground_truth/sample15/: metadata.json  rtruth.R  task.yml
ground_truth/sample15_income_bands/: task.yml
ground_truth/sample16/: metadata.json  rtruth.R  task.yml
ground_truth/sample16_household_income/: task.yml
ground_truth/sample17/: metadata.json  task.yml
ground_truth/sample17_area_deprivation/: task.yml
ground_truth/sample18/: task.yml
ground_truth/sample18_ghq/: task.yml
ground_truth/sample19/: metadata.json  task.yml
ground_truth/sample19_bmi/: task.yml
ground_truth/sample1_sex/: task.yml
ground_truth/sample2/: metadata.json  rtruth.R  task.yml
ground_truth/sample20/: rtruth.R  task.yml
ground_truth/sample20_alcohol/: task.yml
ground_truth/sample2_ethnicity/: task.yml
ground_truth/sample3/: metadata.json  rtruth.R  task.yml
ground_truth/sample3_language/: task.yml
ground_truth/sample4/: metadata.json  rtruth.R  task.yml
ground_truth/sample4_sexual_orientation/: task.yml
ground_truth/sample5/: metadata.json  rtruth.R  task.yml
ground_truth/sample5_partnership_status/: task.yml
ground_truth/sample6/: metadata.json  rtruth.R  task.yml
ground_truth/sample6_region/: task.yml
ground_truth/sample7/: metadata.json  rtruth.R  task.yml
ground_truth/sample7_educational_aims/: task.yml
ground_truth/sample8/: metadata.json  rtruth.R  task.yml
ground_truth/sample8_qualifications/: task.yml
ground_truth/sample9/: metadata.json  rtruth.R  task.yml
ground_truth/sample9_parental_education/: task.yml
ground_truth/sample_template/: task.yml
ground_truth/task1/: task.yml
ground_truth/task10/: metadata.json  task.yml
ground_truth/task11/: metadata.json  task.yml
ground_truth/task12/: metadata.json  task.yml
ground_truth/task13/: metadata.json  task.yml
scripts/: dataset_comparison_example.py  initialise_ground_truth.py  initialise_ground_truth.sh  install_configure_r.sh  rebuild_experiments.py  run_comparison.py  run_experiment.py
src/: agents.py  cleanup.py  code_comparison_tool.py  comparison_tool.py  config.py  data_comparison_tool.py  initialise_ground_truth.py  ollama_utils.py  r_code_agent.py  rebuild_experiments.py  rubrics.py  tools.py
tests/: test_agents.py  test_cleanup.py  test_code_comparison_tool.py  test_column_matcher.py  test_comparisons.py  test_data_comparator.py  test_initialise_ground_truth.py  test_main_comparison.py  test_ollama_utils.py  test_placeholder.py  test_r_code_agent.py  test_rebuild_experiments.py  test_report.py  test_rubrics.py  test_tools.py
(+1251 files in other folders)
