[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest-cov>=6.2.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "types-pyyaml>=6.0.12.20250915",
]

[project]
authors = [
    {email = "m.nixon@ucl.ac.uk", name = "Mack Nixon"},
    {email = "n.loynes@ucl.ac.uk", name = "Nik Loynes"},
]
dependencies = [
    "fhaviary>=0.28.0",
    "ipython>=9.8.0",
    "jellyfish>=1.2.1",
    "langchain-core>=1.1.1",
    "ldp[nn]>=0.40.0",
    "loguru>=0.7.3",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    "sentence-transformers>=5.1.2",
    "smolagents>=1.22.0",
    "statsmodels>=0.14.6",
    "striprtf>=0.0.29",
    "tenacity>=9.1.2",
]
description = "How good are ~open llms at performing routing data cleaning and analysis tasks for epidemiology? "
name = "epidemiology-llm-data-tasks"
readme = "README.md"
requires-python = ">=3.13.5"
version = "0.1.0"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["loguru.*", "pandas.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "yaml.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["smolagents", "smolagents.*"]

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose"]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["app/migrations/versions/*.py", "docs/*.py", "tmp/"]
fix = true
force-exclude = true
target-version = "py312"
lint.ignore = [
    "ANN003", # kwargs type annotation required
    "ARG002", # kwargs unused
    "COM812", # trailing commas (ruff-format recommended)
    "D104", # module docstring
    "D203", # no-blank-line-before-class
    "D205", # missing-blank-line-after-summary
    "D212", # multi-line-summary-first-line
    "D403", # forcing upper-case
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "ERA001", # allow commented code -- FOR NOW!
    "FIX002", # implicit trust that TODOs are not trivial, or else they would be fixed
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
    "RET505", # elif pedantry -- i like elif, leave me alone!
    "RUF012", # where ruff wants type annotations using ClassVar for subclasses - mypy doesnt care, so why would we?
    "TD002", # name for TO DO
    "TD003", # pedantic issue number requester in to dos
]
lint.per-file-ignores = {"tests*" = [
    "ANN001", # No return type annotation
    "ANN201", # No return type annotation
    "ARG001", # Unused function argument
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
    "INP001", # File is part of an implicit namespace package.
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "S101", # Use of `assert` detected,
    "SLF001", # accessing private members
]}
lint.select = ["ALL"]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = ["classmethod"]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
